# qa_guru_python_8_19

./: README.md  pyproject.toml
tests/: tests_api.py  utils.py
